# frictionless-metrics-in-context

./: .gitignore  README.md  pyproject.toml
exploration/: collect_coci_issns.py  exploring_frictionless.ipynb  journal_coverage.ipynb
hackathon/1_report/: Untitled.ipynb
hackathon/dummy_data/: create_dummy_data.ipynb
hackathon/dummy_data/citation_data/: articles.csv  authors.csv  references.csv
hackathon/dummy_data/citation_index_profiles/: gs.json
hackathon/dummy_data/metadata/: articles.json
notebooks/: exploring_frictionless.ipynb  journal_coverage.ipynb  prototypes.ipynb
proof_of_concept/: proof_of_concept.ipynb
proof_of_concept/input_files/: article_metadata.csv  article_metrics.csv
proof_of_concept/schemas/: article_patterns.yaml
prototype/dummy_data/: mentions.csv
prototypes/1_scite/: prototype_1_scite.ipynb
prototypes/1_scite/input_files/: article_metrics.csv  citation_metrics.csv  citations.csv  mentions.csv
prototypes/1_scite/schemas/: citation_patterns.yaml  contexts.yaml  event.yaml  traces.yaml
prototypes/2_altmetrics/: wos.json
prototypes/2_comparing_two_counts/: compare_citation_counts.ipynb
