[tool.poetry]
name = "metrics-in-context"
version = "0.1.0"
description = "Metrics in Context - Development of a Tabular Data Package for Scholarly Metrics"
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
frictionless = "^3.27.3"
pandas = "^1.1.4"
plantuml = "^0.3.0"
habanero = "^0.7.4"
matplotlib-venn = "^0.11.6"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
pycodestyle = "^2.6.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
